Description of your changes

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_ENDPOINT="https://vercel.com/priyanshu-s-projects-709fb5db/okchat/AtJa6qKSTkyhUrhFSrzkymun3S1v"
+REACT_APP_ENDPOINT="https://okchat-git-main-priyanshu-s-projects-709fb5db.vercel.app/"
